cont to debug page 2

--- a/public/page-2.html
+++ b/public/page-2.html
@@ -18,7 +18,7 @@
 
   </head>
 
-<body id="page-top"> <div id="preloader"></div>
+<body id="page-top">
 
     <div id="nav" :class="{'bg-grey-darker p-6': !scrolled, 'bg-black px-6 py-3': scrolled}" 
     class="v-cloak fixed pin-t w-full z-100 trans text-center">
@@ -58,49 +58,37 @@
             </div>
         </header>
 
-      
-
-        <section class="load py-8 bg-grey-lightest">
-
-            <h2 class="leading-tight text-center text-black pb-8">
-              <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
-              Hide on small and show swiper.
-            </h2>
-
-            <div class="container mx-auto px-2">
-                <!-- Swiper -->
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide bg-grey-light">
-                        <article class="my-8 text-center">
-                            <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
-                          <p class="mt-4">
-                            <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
-                          </p>
-                        </article>
-                      </div>
-                      <div class="swiper-slide bg-grey-light">
-                          <article class="my-8 text-center">
-                              <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
-                            <p class="mt-4">
-                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
-                            </p>
-                          </article>
-                      </div>
-                      <div class="swiper-slide bg-grey-light">
-                          <article class="my-8 text-center">
-                              <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
-                            <p class="mt-4">
-                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
-                            </p>
-                          </article>
-                      </div>
-                    </div>
-                    <!-- Add Pagination -->
-                    <div class="swiper-pagination"></div>
+          <!-- Swiper -->
+          <div class="load swiper-container-hero">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide bg-purple-darker bg-cover" 
+                  style="background-image: url('https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
+                  1
                 </div>
-            </div>
-        </section>
+                <div class="swiper-slide bg-grey bg-cover bg-bottom"
+                  style="background-image: url('https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80');">
+                 2
+                </div>
+                <div class="swiper-slide bg-purple-darker bg-cover"
+                  style="background-image: url('https://images.unsplash.com/photo-1531986627054-7f294d095acd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
+                  3
+                </div>
+                <div class="swiper-slide bg-grey bg-cover bg-bottom"
+                  style="background-image: url('https://images.unsplash.com/photo-1449130015084-2d48a345ae62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1653&q=80');">
+                  4
+                </div>
+                <div class="swiper-slide bg-purple-darker bg-cover bg-top"
+                  style="background-image: url('https://images.unsplash.com/photo-1543766687-d7031c855c00?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1649&q=80');">
+                 5
+              </div>
+              </div>
+              <!-- Add Pagination -->
+              <div class="swiper-pagination-hero text-center"></div>
+                <!-- Add Arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+          </div>
+
 
 
 
