--- a/public/page-2.html
+++ b/public/page-2.html
@@ -47,78 +47,53 @@
     </nav>
   </div>
 
-      <header class="text-white">
-            <div class="swiper-overlay-text absolute flex-grow flex flex-col justify-center pin z-10">
-                <div class="load text-center">
-                    <h3 class="">Tailwind CSS.</h3>
-                    <p class="sm:mt-4">
-                        Tailwind is a utility-first CSS framework for rapidly building custom user interfaces.
-                    </p>
+     
+
+        <section class="load py-8 bg-grey-lightest">
+
+            <h2 class="leading-tight text-center text-black pb-8">
+              <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
+              Hide on small and show swiper.
+            </h2>
+
+            <div class="container mx-auto px-2">
+                <!-- Swiper -->
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide bg-grey-light">
+                        <article class="my-8 text-center">
+                            <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
+                          <p class="mt-4">
+                            <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                          </p>
+                        </article>
+                      </div>
+                      <div class="swiper-slide bg-grey-light">
+                          <article class="my-8 text-center">
+                              <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
+                            <p class="mt-4">
+                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                            </p>
+                          </article>
+                      </div>
+                      <div class="swiper-slide bg-grey-light">
+                          <article class="my-8 text-center">
+                              <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
+                            <p class="mt-4">
+                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                            </p>
+                          </article>
+                      </div>
+                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-        </header>
-
-          <!-- Swiper -->
-          <div class="load swiper-container-hero">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide bg-purple-darker bg-cover" 
-                  style="background-image: url('https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
-                  1
-                </div>
-                <div class="swiper-slide bg-grey bg-cover bg-bottom"
-                  style="background-image: url('https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80');">
-                 2
-                </div>
-                <div class="swiper-slide bg-purple-darker bg-cover"
-                  style="background-image: url('https://images.unsplash.com/photo-1531986627054-7f294d095acd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
-                  3
-                </div>
-                <div class="swiper-slide bg-grey bg-cover bg-bottom"
-                  style="background-image: url('https://images.unsplash.com/photo-1449130015084-2d48a345ae62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1653&q=80');">
-                  4
-                </div>
-                <div class="swiper-slide bg-purple-darker bg-cover bg-top"
-                  style="background-image: url('https://images.unsplash.com/photo-1543766687-d7031c855c00?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1649&q=80');">
-                 5
-              </div>
-              </div>
-              <!-- Add Pagination -->
-              <div class="swiper-pagination-hero text-center"></div>
-                <!-- Add Arrows -->
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-          </div>
+        </section>
 
 
 
 
-
-  <section>
-    <div class="container mx-auto">
-      <div class="flex-grow flex flex-col justify-center text-center my-8">
-        <h4>picturefill.js</h4>
-      <picture>
-        <source srcset="https://via.placeholder.com/1200x200" media="(min-width: 1200px)">
-        <source srcset="https://via.placeholder.com/800x200" media="(min-width: 800px)">
-        <img src="https://via.placeholder.com/150x150" alt="My amazing peace pie at the appropriate dimension!">
-    </picture>
-    </div>
-  </div>
-  </section>
-
-
-  <div class="container mx-auto px-2">
-      <div class="flex flex-wrap text-center">
-          <div class="w-full my-12">
-            <div class="sm:hide">
-                Show on lg and hide on small
-              </div>
-              <div class="hide sm:show">
-                Show on Small Only
-              </div>
-          </div>
-        </div>
-    </div>
 
 
     
