--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
   <head>
+
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, initial-scale=1, viewport-fit=cover">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <link href="img/favicon.png" rel="icon" type="image/x-icon" />
+      <meta name="google-site-verification" content="ZD4OObUOclRm4XtYkeZdkqzODnVCWZuJO2Zf2NpmewE" />
+  
+      <title>Template</title>
+      
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/aos@2.3.3/dist/aos.css" rel="stylesheet">
