--- a/public/page-4.html
+++ b/public/page-4.html
@@ -28,55 +28,27 @@
 
 <body id="page-top">
 
-    <div id="nav" :class="{'bg-grey-darker p-6': !scrolled, 'bg-black px-6 py-3': scrolled}" 
-    class="v-cloak fixed pin-t w-full z-100 trans text-center">
-    <nav class="flex items-center justify-between flex-wrap">
-      <div class="flex items-center flex-no-shrink text-white mr-6">
-        <a target="_blank" class="text-white no-underline mr-12" 
-            href="https://tailwindcss.com/docs/what-is-tailwind/">
-            <span class="font-semibold text-xl tracking-tight">Tailwind CSS</span>
-        </a>
-      </div>
-      <div class="block sm:hidden">
-        <button @click="toggle" class="flex items-center px-3 py-2 border rounded text-white border-teal-light hover:text-white hover:border-white">
-          <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-        </button>
-      </div>
-      <div :class="open ? 'block': 'hidden'" class="w-full flex-grow sm:flex sm:items-center sm:w-auto">
-        <div id="nav-links" class="text-sm sm:flex-grow">
-          <a v-for="item in items" :href="item.url" class="v-cloak load font-bold no-underline block mt-4 sm:inline-block sm:mt-0 text-white hover:text-white mr-16">
-              {{ item.message }}
-          </a>
-        </div>
-        <div>
-          <a target="_blank" href="https://github.com/donnagal/tailwind-css-template" class="no-underline inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal hover:bg-white mt-4 sm:mt-0">Download</a>
-        </div>
-      </div>
-    </nav>
-  </div>
+    <div id="nav"></div>
 
-
-        <section id="blog" class="mt-20 h-screen">
-            <h2 class="leading-tight text-center text-black py-8">
-              <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
-              This is a vue feed with google docs.
-            </h2>
-              <div class="container mx-auto px-2">
-                  <div class="flex flex-wrap">
-                      <div class="w-full mb-4">
-                          <div id="blog">
-                              <div v-for="entry in entries">
-                                <h2>{{entry.gsx$title.$t}}</h2>
-                                <div v-html="entry.gsx$moretext.$t"></div>
-                                <img :src="entry.gsx$imageurl.$t" class="" />
-                             </div>
-                      </div>
+      <section id="blog" class="mt-20 h-screen">
+          <h2 class="leading-tight text-center text-black py-8">
+            <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
+            This is a vue feed with google docs.
+          </h2>
+            <div class="container mx-auto px-2">
+                <div class="flex flex-wrap">
+                    <div class="w-full mb-4">
+                        <div id="blog">
+                            <div v-for="entry in entries">
+                              <h2>{{entry.gsx$title.$t}}</h2>
+                              <div v-html="entry.gsx$moretext.$t"></div>
+                              <img :src="entry.gsx$imageurl.$t" class="" />
+                            </div>
                     </div>
-                </div>
-                </div>
-          </section>
-
-
+                  </div>
+              </div>
+              </div>
+        </section>
 
 
     <!-- Plugin JavaScript -->
@@ -92,9 +64,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
     <script src="vue/app.js"></script>
-    <script src="vue/app-nav.js"></script>
 
-  
 
   </body>
 
