--- a/public/__nav.html
+++ b/public/__nav.html
@@ -7,7 +7,7 @@
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
-        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto toggle-hidden hidden">
+        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto sm:h-fill toggle-hidden hidden pt-12 lg:pt-0">
           <div class="text-sm lg:flex-grow">
             <a href="/" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white lg:mr-24 no-underline">
               Page 1
@@ -18,7 +18,7 @@
             <a href="/page-3.html" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white lg:mr-24 no-underline">
               Page 3
             </a>
-            <a href="/page-4.html" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white no-underline">
+            <a href="/page-4.html" class="block mt-4 lg:inline-block lg:mt-0 text-teal-lighter hover:text-white no-underline lg:pb-0 pb-12">
             Page 4
             </a>
           </div>
