hide nav swiper on small

--- a/public/page-2.html
+++ b/public/page-2.html
@@ -70,8 +70,8 @@
               <!-- Add Pagination -->
               <div class="swiper-pagination-hero text-center"></div>
                 <!-- Add Arrows -->
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next sm:hide"></div>
+              <div class="swiper-button-prev sm:hide"></div>
           </div>
 
 
