--- a/public/index.html
+++ b/public/index.html
@@ -135,11 +135,11 @@
         </article>
       </section>
 
-      <section class="bg-purple-darker text-white p-8 hero-pattern">
+      <section class="bg-g-purple text-white p-8 hero-pattern">
         <div class="container mx-auto">
           <article class="max-w-sm md:py-32">
-              <h2 class="leading-tight text-grey-lightest">
-                <small class="block uppercase tracking-wide text-purple text-sm leading-loose md:mb-2">
+              <h2 class="leading-tight">
+                <small class="block uppercase tracking-wide text-sm leading-loose md:mb-2">
                   Better Communication
                 </small>
                 Give and get feedback
