--- a/public/page-2.html
+++ b/public/page-2.html
@@ -150,10 +150,10 @@
     </div>
 
 
-    
+    <div id="footer-2"></div>
 
     <!-- Plugin JavaScript -->
-        <script src="https://idangero.us/swiper/dist/js/swiper.min.js"></script>
+    <script src="https://idangero.us/swiper/dist/js/swiper.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.3/dist/aos.js"></script>
