--- a/public/page-3.html
+++ b/public/page-3.html
@@ -70,8 +70,31 @@
                         <div class="w-full sm:w-1/4 md:w-1/2 lg:w-1/4 mb-4 bg-grey-light h-12"></div>
                       </div>
                 </div>
+
+
+                <div class="container mx-auto px-2">
+                    <h2 class="leading-tight text-center text-black py-8">With gutter</h2>
+                    <!-- Three columns -->
+                    <div class="flex flex-wrap -mx-2 my-2">
+                        <div class="p-2 w-full sm:w-1/3 md:w-1/3 lg:w-1/3">
+                          <div class="bg-grey p-4">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque ut accusamus, aperiam impedit magni, vel voluptatibus hic corporis aliquam blanditiis quas numquam ipsa placeat soluta earum molestiae repellendus adipisci cumque!
+                          </div>
+                        </div>
+                        <div class="p-2 w-full sm:w-1/3 md:w-1/3 lg:w-1/3">
+                          <div class="bg-grey-light p-4">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique eligendi laudantium nisi sapiente velit impedit. Omnis repellendus adipisci soluta illum inventore itaque non, officiis distinctio ut quis quia qui sapiente?
+                          </div>
+                        </div>
+                        <div class="p-2 w-full sm:w-1/3 md:w-1/3 lg:w-1/3">
+                          <div class="bg-grey p-4">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, consectetur? Mollitia amet, aliquid commodi reprehenderit iste illum explicabo nulla. Harum ad accusamus sint corrupti possimus dolore quibusdam, excepturi doloribus totam?
+                          </div>
+                        </div>
+                      </div>
+                </div>
               
-                <h2 class="leading-tight text-center text-black py-8">
+                  <h2 class="leading-tight text-center text-black py-8">
                     <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
                     The grid flex 
                   </h2>
