--- a/public/page-2.html
+++ b/public/page-2.html
@@ -161,6 +161,7 @@
 
     <script src="js/main.min.js"></script>
     <script src="js/swiper.min.js"></script>
+    <script src="js/move-image.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
 
