touch ups on image backgrounds

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
     <div id="nav"></div>
 
 
-    <header class="bg-img h-screen bg-purple-darker text-white bg-scroll">
+    <header class="bg-img h-screen bg-purple-darker text-white bg-scroll"
+      data-image-src="https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80">
+
         <div class="load container flex flex-col h-full mx-auto">
           <div class="flex-grow flex flex-col justify-center text-center">
               <h1 class="text-5xl">Tailwind CSS Template</h1>
