--- a/public/page-2.html
+++ b/public/page-2.html
@@ -35,10 +35,9 @@
       <header class="text-white">
             <div class="swiper-overlay-text absolute flex-grow flex flex-col justify-center pin z-10">
                 <div class="text-center">
-                    <h3 class="">Tailwind CSS.</h3>
-                    <p class="sm:mt-4">
-                        Tailwind is a utility-first CSS framework for rapidly building custom user interfaces.
-                    </p>
+                    <h3 class="text-9xl">Tailwind CSS.</h3>
+                    <h3 class="text-9xl py-12  animate-add trans">Template</h3>
+                    <h3 class="text-5xl">by Donna.</h3>
                 </div>
             </div>
         </header>
@@ -46,24 +45,24 @@
           <!-- Swiper -->
           <div class="load swiper-container-hero">
               <div class="swiper-wrapper">
-                <div class="swiper-slide bg-purple-darker bg-cover" 
-                  style="background-image: url('https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
+                <div class="swiper-slide bg-img" 
+                 data-image-src="https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
                   1
                 </div>
-                <div class="swiper-slide bg-grey bg-cover bg-bottom"
-                  style="background-image: url('https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80');">
+                <div class="swiper-slide bg-img bg-grey"
+                 data-image-src="https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80">
                  2
                 </div>
-                <div class="swiper-slide bg-purple-darker bg-cover"
-                  style="background-image: url('https://images.unsplash.com/photo-1531986627054-7f294d095acd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');">
+                <div class="swiper-slide bg-img"
+                 data-image-src="https://images.unsplash.com/photo-1531986627054-7f294d095acd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
                   3
                 </div>
-                <div class="swiper-slide bg-grey bg-cover bg-bottom"
-                  style="background-image: url('https://images.unsplash.com/photo-1449130015084-2d48a345ae62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1653&q=80');">
+                <div class="swiper-slide bg-img bg-grey"
+                 data-image-src="https://images.unsplash.com/photo-1449130015084-2d48a345ae62?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1653&q=80">
                   4
                 </div>
-                <div class="swiper-slide bg-purple-darker bg-cover bg-top"
-                  style="background-image: url('https://images.unsplash.com/photo-1543766687-d7031c855c00?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1649&q=80');">
+                <div class="swiper-slide bg-img"
+                 data-image-src="https://images.unsplash.com/photo-1543766687-d7031c855c00?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1649&q=80">
                  5
               </div>
               </div>
@@ -88,7 +87,7 @@
                 <!-- Swiper -->
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide bg-grey-light">
+                      <div class="swiper-slide">
                         <article class="my-8 text-center">
                             <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                           <p class="mt-4">
@@ -96,7 +95,7 @@
                           </p>
                         </article>
                       </div>
-                      <div class="swiper-slide bg-grey-light">
+                      <div class="swiper-slide">
                           <article class="my-8 text-center">
                               <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                             <p class="mt-4">
@@ -104,7 +103,7 @@
                             </p>
                           </article>
                       </div>
-                      <div class="swiper-slide bg-grey-light">
+                      <div class="swiper-slide">
                           <article class="my-8 text-center">
                               <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                             <p class="mt-4">
