--- a/public/page-2.html
+++ b/public/page-2.html
@@ -36,7 +36,7 @@
             <div class="swiper-overlay-text absolute flex-grow flex flex-col justify-center pin z-10">
                 <div class="text-center">
                     <h3 class="text-9xl">Tailwind CSS.</h3>
-                    <h3 class="text-9xl py-12  animate-add trans">Template</h3>
+                    <h3 class="text-9xl py-12  animate-add trans-slow">Template</h3>
                     <h3 class="text-5xl">by Donna.</h3>
                 </div>
             </div>
