Add type animation

--- a/public/page-2.html
+++ b/public/page-2.html
@@ -35,9 +35,9 @@
       <header class="text-white">
             <div class="swiper-overlay-text absolute flex-grow flex flex-col justify-center pin z-10">
                 <div class="text-center">
-                    <h3 class="text-9xl">Tailwind CSS.</h3>
-                    <h3 class="text-9xl py-12  animate-add trans-slow">Template</h3>
-                    <h3 class="text-5xl">by Donna.</h3>
+                    <h3 class="lg:text-9xl text-2xl">Tailwind CSS.</h3>
+                    <h3 class="lg:text-9xl text-2xl lg:py-12 py-5 animate-add trans-slow">Template</h3>
+                    <h3 class="lg:text-5xl text-2xl">by Donna.</h3>
                 </div>
             </div>
         </header>
