--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,13 @@
 
         <div class="load container flex flex-col h-full mx-auto">
           <div class="flex-grow flex flex-col justify-center text-center">
+              
+            <div class="type pb-5">
+                <h1 class="inline-block text-2xl" data-items="Tailwind is a utility-first CSS framework for rapidly building custom user interfaces.."></h1><i class="inline-block"></i>
+            </div>
+
               <h1 class="text-5xl">Tailwind CSS Template</h1>
               
-            <p class="sm:mt-4">
-                Tailwind is a utility-first CSS framework for rapidly building custom user interfaces.
-            </p>
             <footer class="sm:mt-4">
                 <a href="#1" class="inline-block px-8 py-4 my-4 bg-purple rounded text-white no-underline tracking-wide
                   font-medium hover:bg-purple-light">
@@ -310,7 +312,8 @@
     <script src="js/main.min.js"></script>
     <script src="js/swiper.min.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+    <script src="js/gsap/gsap.js"></script>
 
     <script>AOS.init();</script>
   </body>
