Add smooth scroll

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <header class="bg-img h-screen bg-purple-darker text-white bg-scroll"
       data-image-src="https://images.unsplash.com/photo-1533406769131-59d4155f3720?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1651&q=80">
 
-        <div class="load container flex flex-col h-full mx-auto">
+        <div class="load-in container flex flex-col h-full mx-auto">
           <div class="flex-grow flex flex-col justify-center text-center">
               
             <div class="type pb-5">
@@ -106,7 +106,7 @@
 
 
         <section class="p-8 bg-img-parallax">
-            <div class="load container flex flex-col h-full mx-auto">
+            <div class="load-in container flex flex-col h-full mx-auto">
                 <div class="flex-grow flex flex-col justify-center text-white text-center">
                     <h1 class="text-5xl">Tailwind CSS Template</h1>
                     
@@ -196,7 +196,7 @@
             <article class="my-8 text-center sm:w-1/2 sm:px-4 lg:w-1/4">
                 <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
               <p class="mt-4">
-                <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                <strong>No information overload-in.</strong> Just learn about things you need to know to solve a specific task.
               </p>
             </article>
             <article class="my-8 text-center sm:w-1/2 sm:px-4 lg:w-1/4">
