--- a/public/page-2.html
+++ b/public/page-2.html
@@ -43,7 +43,7 @@
         </header>
 
           <!-- Swiper -->
-          <div class="load swiper-container-hero">
+          <div class="load-in swiper-container-hero">
               <div class="swiper-wrapper">
                 <div class="swiper-slide bg-img" 
                  data-image-src="https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
@@ -76,7 +76,7 @@
 
 
 
-        <section class="load py-8 bg-grey-lightest">
+        <section class="load-in py-8 bg-grey-lightest">
 
             <h2 class="leading-tight text-center text-black pb-8">
               <small class="block uppercase tracking-wide text-grey-dark text-sm leading-loose">Features</small>
@@ -91,7 +91,7 @@
                         <article class="my-8 text-center">
                             <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                           <p class="mt-4">
-                            <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                            <strong>No information overload-in.</strong> Just learn about things you need to know to solve a specific task.
                           </p>
                         </article>
                       </div>
@@ -99,7 +99,7 @@
                           <article class="my-8 text-center">
                               <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                             <p class="mt-4">
-                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                              <strong>No information overload-in.</strong> Just learn about things you need to know to solve a specific task.
                             </p>
                           </article>
                       </div>
@@ -107,7 +107,7 @@
                           <article class="my-8 text-center">
                               <img src="https://images.unsplash.com/photo-1547010364-858c5b011e23?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" />
                             <p class="mt-4">
-                              <strong>No information overload.</strong> Just learn about things you need to know to solve a specific task.
+                              <strong>No information overload-in.</strong> Just learn about things you need to know to solve a specific task.
                             </p>
                           </article>
                       </div>
