--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   
       <title>Template</title>
       
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.6.6/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/aos@2.3.3/dist/aos.css" rel="stylesheet">
     
